--- a/Solution1.Module.Web/Solution1.Module.Web.csproj
+++ b/Solution1.Module.Web/Solution1.Module.Web.csproj
@@ -190,6 +190,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\DeleteController.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controllers\DeleteController.Designer.cs">
+      <DependentUpon>DeleteController.cs</DependentUpon>
+    </Compile>
     <Compile Include="WebModule.cs">
       <SubType>Component</SubType>
     </Compile>
