remove message, business object based security

--- a/Solution1.Module/Solution1.Module.csproj
+++ b/Solution1.Module/Solution1.Module.csproj
@@ -161,6 +161,7 @@
   <ItemGroup>
     <Compile Include="BusinessObjects\Company.cs" />
     <Compile Include="BusinessObjects\Customer.cs" />
+    <Compile Include="BusinessObjects\IBusinessObject.cs" />
     <Compile Include="BusinessObjects\IIntegrationItem.cs" />
     <Compile Include="BusinessObjects\Order.cs" />
     <Compile Include="BusinessObjects\Solution1DbContext.cs" />
@@ -204,6 +205,10 @@
     <None Include="FunctionalTests\config.xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="UnusableNodes.xml">
+      <DependentUpon>Model.DesignedDiffs.xafml</DependentUpon>
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="Welcome.html" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
