Product, OrderItem and relations added.

--- a/Solution1.Module/Solution1.Module.csproj
+++ b/Solution1.Module/Solution1.Module.csproj
@@ -164,6 +164,8 @@
     <Compile Include="BusinessObjects\IBusinessObject.cs" />
     <Compile Include="BusinessObjects\IIntegrationItem.cs" />
     <Compile Include="BusinessObjects\Order.cs" />
+    <Compile Include="BusinessObjects\OrderItem.cs" />
+    <Compile Include="BusinessObjects\Product.cs" />
     <Compile Include="BusinessObjects\Solution1DbContext.cs" />
     <Compile Include="BusinessObjects\User.cs" />
     <Compile Include="DatabaseUpdate\Updater.cs" />
