--- a/Solution1.Module/Solution1.Module.csproj
+++ b/Solution1.Module/Solution1.Module.csproj
@@ -160,16 +160,19 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BusinessObjects\Company.cs" />
-    <Compile Include="BusinessObjects\Customer.cs" />
-    <Compile Include="BusinessObjects\IBusinessObject.cs" />
-    <Compile Include="BusinessObjects\IIntegrationItem.cs" />
-    <Compile Include="BusinessObjects\Order.cs" />
-    <Compile Include="BusinessObjects\OrderItem.cs" />
-    <Compile Include="BusinessObjects\Product.cs" />
+    <Compile Include="BusinessObjects\Order\Company.cs" />
+    <Compile Include="BusinessObjects\Order\Customer.cs" />
+    <Compile Include="BusinessObjects\General\IBusinessObject.cs" />
+    <Compile Include="BusinessObjects\General\IIntegrationItem.cs" />
+    <Compile Include="BusinessObjects\Survey\MultipleChoiceOptionsDefinition.cs" />
+    <Compile Include="BusinessObjects\Order\Order.cs" />
+    <Compile Include="BusinessObjects\Order\OrderItem.cs" />
+    <Compile Include="BusinessObjects\General\Parameter.cs" />
+    <Compile Include="BusinessObjects\Order\Product.cs" />
+    <Compile Include="BusinessObjects\Survey\QuestionDefinition.cs" />
     <Compile Include="BusinessObjects\Solution1DbContext.cs" />
-    <Compile Include="BusinessObjects\SystemObjects\Parameter.cs" />
-    <Compile Include="BusinessObjects\User.cs" />
+    <Compile Include="BusinessObjects\Survey\SurveyDefinition.cs" />
+    <Compile Include="BusinessObjects\General\User.cs" />
     <Compile Include="Controllers\GeneralControllers\ActionContainerCustomiserController.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -188,6 +191,12 @@
     <Compile Include="Controllers\GeneralControllers\CompanyFilterListViewController.Designer.cs">
       <DependentUpon>CompanyFilterListViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\GeneralControllers\NestedCollectionViewActionRemoverController.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controllers\GeneralControllers\NestedCollectionViewActionRemoverController.Designer.cs">
+      <DependentUpon>NestedCollectionViewActionRemoverController.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\OrderController.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -198,6 +207,7 @@
     <Compile Include="Helper\ApplicationHelper.cs" />
     <Compile Include="Helper\Constants.cs" />
     <Compile Include="Helper\Result.cs" />
+    <Compile Include="Helper\SystemHelper.cs" />
     <Compile Include="Helper\UserHelper.cs" />
     <Compile Include="Module.cs">
       <SubType>Component</SubType>
@@ -208,6 +218,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controllers\GeneralControllers\NestedCollectionViewActionRemoverController.resx">
+      <DependentUpon>NestedCollectionViewActionRemoverController.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controllers\OrderController.resx">
       <DependentUpon>OrderController.cs</DependentUpon>
     </EmbeddedResource>
@@ -253,6 +266,7 @@
     </None>
     <Content Include="Welcome.html" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
