--- a/Solution1.Web/Web.config
+++ b/Solution1.Web/Web.config
@@ -40,7 +40,14 @@
   </appSettings>
   <connectionStrings>
     <add name="EasyTestConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\mssqllocaldb;Initial Catalog=Solution1EasyTest" />
-    <add name="ConnectionString" connectionString="Integrated Security=SSPI;MultipleActiveResultSets=True;Data Source=(localdb)\mssqllocaldb;Initial Catalog=ClientAuraDB" />
+<add name="ConnectionString" connectionString="Server=localhost\SQLEXPRESS;Database=ClientAuraDB;User Id=aaa;Password=aaa" />
+    
+    <!--<add name="ConnectionString" connectionString="Server=localhost\SQLEXPRESS;Database=ClientAuraDB;Trusted_Connection=True;" />-->
+    <!--<add name="ConnectionString" connectionString="Integrated Security=SSPI;MultipleActiveResultSets=True;Data Source=(localdb)\mssqllocaldb;Initial Catalog=ClientAuraDB" />-->
+    
+    <!--<add name="ConnectionString" connectionString="Integrated Security=SSPI;MultipleActiveResultSets=True;Data Source=(localdb)\.\IIS_DB;Initial Catalog=ClientAuraDB" />-->
+    
+    
     <!--    
     Use the following connection string to connect to a Jet (Microsoft Access) database that is already created and located in the <application root>/app_data folder. 
     <add name="ConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Password=;User ID=Admin;Data Source=|DataDirectory|\Solution1.mdb;Mode=Share Deny None;"/>
