When OrderSurvey.Survey changes, SurveySendingDays propery is refreshed.

--- a/Solution1.Module/Solution1.Module.csproj
+++ b/Solution1.Module/Solution1.Module.csproj
@@ -298,6 +298,10 @@
       <DependentUpon>Model.DesignedDiffs.xafml</DependentUpon>
       <SubType>Designer</SubType>
     </None>
+    <None Include="UnusableNodes7.xml">
+      <DependentUpon>Model.DesignedDiffs.xafml</DependentUpon>
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="Welcome.html" />
   </ItemGroup>
   <ItemGroup />
