Survey and Customer Email  validation on Order Feedback Process Start, Info Popup is shown when order survey process is started.

--- a/Solution1.Module/Solution1.Module.csproj
+++ b/Solution1.Module/Solution1.Module.csproj
@@ -208,6 +208,7 @@
     <Compile Include="DatabaseUpdate\Updater.cs" />
     <Compile Include="Helper\ApplicationHelper.cs" />
     <Compile Include="Helper\Constants.cs" />
+    <Compile Include="Helper\Dictionary.cs" />
     <Compile Include="Helper\Result.cs" />
     <Compile Include="Helper\SystemHelper.cs" />
     <Compile Include="Helper\UserHelper.cs" />
