Customer detail page: One column editors email name validation added Order Item count should be positive, product should be chosen validatons Order list: Integration colums removed

--- a/Solution1.Module/Solution1.Module.csproj
+++ b/Solution1.Module/Solution1.Module.csproj
@@ -276,6 +276,8 @@
     <Content Include="Tasks\order- detail page.txt" />
     <Content Include="Tasks\product- detail page.txt" />
     <Content Include="Tasks\Question Definition.txt" />
+    <Content Include="Tasks\Reports.txt" />
+    <Content Include="Tasks\Services.txt" />
     <Content Include="Tasks\SurveyDefinition.txt" />
     <Content Include="Tasks\user pass.txt" />
     <Content Include="Tasks\validasyonlar.txt" />
