Logo added Customer list: intergration columns dropped System sub menu visible only for admin Multiple Choice Option required validations Product - Product Question n to n structure Parameters edit roles removed from general users Question Definition required validations Survey Definition: Is default can be modified only with an action Sending survey day definition field added IsDeleted field added

--- a/Solution1.Module/Solution1.Module.csproj
+++ b/Solution1.Module/Solution1.Module.csproj
@@ -205,6 +205,12 @@
     <Compile Include="Controllers\OrderController.Designer.cs">
       <DependentUpon>OrderController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\SurveyDefinitionViewController.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controllers\SurveyDefinitionViewController.Designer.cs">
+      <DependentUpon>SurveyDefinitionViewController.cs</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseUpdate\Updater.cs" />
     <Compile Include="Helper\ApplicationHelper.cs" />
     <Compile Include="Helper\Constants.cs" />
@@ -226,6 +232,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controllers\OrderController.resx">
       <DependentUpon>OrderController.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controllers\SurveyDefinitionViewController.resx">
+      <DependentUpon>SurveyDefinitionViewController.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml">
       <SubType>Designer</SubType>
